<resources>
    <string name="app_name">RenatoCouto_Atividade_08</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_sair">Sair</string>
    <string name="titulo_app">Atividade 08</string>
    <string name="menu_home">Home</string>
    <string name="menu_resumo_primeiro">Ler resumo video 1</string>
    <string name="menu_resumo_terceiro">Enviar resumo video 3</string>
    <string name="menu_analise">Analise Acessibilidade</string>
    <string name="resumo_video_1">O video explica as novidades do Android Studio 3.0, focando no novo Android Profiler, que substitui o antigo Android Monitor. Esta ferramenta oferece uma visão integrada do desempenho do aplicativo, mostrando dados de memória, CPU e rede em tempo real. O CPU Profiler permite ver a utilização da CPU e o comportamento das threads, podendo gravar os métodos executados de forma amostrada ou instrumentada. O Memory Profiler mostra o uso de memória do app em tempo real, permitindo analisar objetos na memória e identificar possíveis vazamentos. Já o Network Profiler monitora o estado da rede e o tráfego de dados, permitindo inspecionar chamadas HTTP, incluindo requisições e respostas. A ferramenta funciona melhor em dispositivos com Android O (API 26) ou superior, mas também pode ser usada em versões anteriores com algumas limitações. Os desenvolvedores podem usar estas ferramentas para identificar e corrigir problemas de desempenho em seus aplicativos. A equipe planeja continuar adicionando novos recursos ao Android Profiler no futuro. .</string>
    <string name="resumo_video_3">O video apresenta dicas para empresas que querem expandir seus aplicativos para mercados emergentes, onde há previsão de um bilhão de novos usuários até 2017. As principais recomendações incluem: traduzir o app para a língua local, criar interfaces simples com menos texto e mais elementos visuais, e adaptar o conteúdo para as preferências locais. É importante também otimizar o aplicativo para funcionar bem em conexões lentas, dispositivos mais básicos e versões antigas do Android. O app deve ser leve (menos de 10MB) e econômico no uso de dados móveis, já que muitos usuários pagam pelo uso. Sugere-se ainda adaptar os preços ao mercado local, não apenas convertendo valores, e oferecer períodos de teste antes da compra. Por fim, recomenda-se criar grupos locais de usuários, responder às avaliações e oferecer bom suporte para construir uma base sólida de clientes..</string>
    <string name="ver_analise">Ver Análise</string>
    <string name="anterior">Anterior</string>
    <string name="pr_xima">Próxima</string>
    <string name="voltar">Voltar</string>
    <string name="print_da_tela_analisada">Print da tela analisada</string>
    <string name="ler_texto">Ler texto</string>
    <string name="enviar">Enviar</string>


    <string-array name="texto_analise">
        <item>\nNenhuma sugestão de mudança!</item>

        <item>\nNenhuma sugestão de mudança!</item>

        <item>Contraste do texto\n
id/buttonSair\n\n
Considere aumentar a taxa de contraste do primeiro plano e do plano de fundo do texto neste item.\n\n
A taxa de contraste do texto no item é 2,73. Ela é determinada com base na estimativa da cor do primeiro plano #FFFFFF e da cor de fundo #FF6F61. Aumente esse valor para 4,50 ou mais.\n\n
Contraste do texto\n
id/buttonNovoJogo\n\n
Considere aumentar a taxa de contraste do primeiro plano e do plano de fundo do texto neste item.\n\n
A taxa de contraste do texto no item é 1,64. Ela é determinada com base na estimativa da cor do primeiro plano #FFFFFF e da cor de fundo #A5D6A7. Aumente esse valor para 4,50 ou mais.</item>

        <item>Contraste do texto\n
id/buttonSair\n\n
Considere aumentar a taxa de contraste do primeiro plano e do plano de fundo do texto neste item.\n\n
A taxa de contraste do texto no item é 2,00. Ela é determinada com base na estimativa da cor do primeiro plano #FFFFFF e da cor de fundo #4FC3F7. Aumente esse valor para 3,00 ou mais.\n\n
Contraste do texto\n
id/button_zera\n\n
Considere aumentar a taxa de contraste do primeiro plano e do plano de fundo do texto neste item.\n\n
A taxa de contraste do texto no item é 2,73. Ela é determinada com base na estimativa da cor do primeiro plano #FFFFFF e da cor de fundo #FF6F61. Aumente esse valor para 3,00 ou mais.</item>

        <item>Contraste do texto\n
id/button_cancelar\n\n
Considere aumentar a taxa de contraste do primeiro plano e do plano de fundo do texto neste item.\n\n
A taxa de contraste do texto no item é 2,00. Ela é determinada com base na estimativa da cor do primeiro plano #FFFFFF e da cor de fundo #4FC3F7. Aumente esse valor para 4,50 ou mais.</item>
    </string-array>

</resources>