<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_resumo_1"
            android:icon="@drawable/escrita"
            android:title="@string/menu_resumo_primeiro" />

        <item
            android:id="@+id/nav_analise_acessibilidade"
            android:icon="@drawable/acessibilidade"
            android:title="@string/menu_analise" />

        <item
            android:id="@+id/nav_resumo_3"
            android:icon="@drawable/whatsapp"
            android:title="@string/menu_resumo_terceiro" />

    </group>
</menu>