<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.renatocouto_atividade_08.ui.home.HomeFragment"
        android:label="@string/titulo_app"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_resumo_1"
        android:name="com.example.renatocouto_atividade_08.ui.resumoprimeirovideo.PrimeiroVideoFragment"
        android:label="@string/menu_resumo_primeiro"
        tools:layout="@layout/fragment_primeiro_video" />

    <fragment
        android:id="@+id/nav_analise_acessibilidade"
        android:name="com.example.renatocouto_atividade_08.ui.analiseacessibilidade.AnaliseAcessibilidadeFragment"
        android:label="@string/menu_analise"
        tools:layout="@layout/fragment_analise_acessibilidade" />

    <fragment
        android:id="@+id/nav_resumo_3"
        android:name="com.example.renatocouto_atividade_08.ui.resumoterceirovideo.TerceiroVideoFragment"
        android:label="@string/menu_resumo_terceiro"
        tools:layout="@layout/fragment_terceiro_video" />

</navigation>